# ai-quota

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai_quota/: __init__.py  __main__.py  cache.py  cli.py  formatters.py
src/ai_quota/providers/: claude.py  codex.py  gemini.py  groq.py  kilo.py  lmstudio.py  opencode.py
tests/test_ai_quota/: test_api.py  test_cache.py  test_claude_extra.py  test_cli.py  test_coverage_gaps.py  test_formatters.py  test_gemini_extra.py  test_parse_claude.py  test_parse_codex.py  test_parse_gemini.py  test_parse_groq.py  test_parse_kilo.py  test_parse_lmstudio.py  test_parse_opencode.py  test_provider_cache.py  test_provider_formatters.py
